# marobo

./: .gitignore  README.md  config.yml  daskcls.py  griewank6d.txt  hartmann6d.txt  langermann6d.txt  log.txt  memProf.txt  modb.txt  profile_results.prof  pyproject.toml  rastrigin2d.txt  rastrigin6d.txt  requirements.txt  smplog.txt  term.txt  test.csv
bo/: interface.py
bo/agent/: agent.py  constants.py  localgp.py  observation.py  partition.py  prior.py  treeOperations.py
bo/bayesianOptimization/: __init__.py  boClass.py  daskTest.py  mainRoutine.py  marlBO.py  marlEI.py  marolloutBO.py  marolloutEI.py  parallelize.py  rollout.py  rolloutAllatOnce.py  rolloutBO.py  rolloutBO.py.save  rolloutEI.py  rolloutEIall.py  rolloutEIpart.py  rolloutIsolated.py  rolloutRoutine.py  rolloutSimple.py  rolloutopt.py  routine.py
bo/sampling/: __init__.py  uniformSampling.py
bo/utils/: computeRobustness.py  cpr.py  domain_split.py  function.py  logged.py  logger.py  netxviz.py  parallelPlot.py  parallelize.py  plotlyExport.py  savestuff.py  timerf.py  treeExport.py  visualize.py  volume.py
demos/: test_1d.py
tests/: log_test.py  misc.py  mptest.py  pp.py
